argocd/overlays/jern.me/argocd-application-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-application-controller
spec:
  template:
    spec:
      containers:
      - name: argocd-application-controller
        resources:
          requests:
            cpu: "10m"
            memory: "90Mi"
