argocd/overlays/jern.me/argocd-dex-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: dex
        resources:
          requests:
            cpu: "5m"
            memory: "15Mi"
