argocd/overlays/jern.me/argocd-notifications-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-notifications-controller
spec:
  template:
    spec:
      containers:
      - name: argocd-notifications-controller
        resources:
          requests:
            cpu: "5m"
            memory: "20Mi"
