argocd/overlays/jern.me/argocd-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-redis
spec:
  template:
    spec:
      containers:
      - name: redis
        resources:
          requests:
            cpu: "5m"
            memory: "10Mi"
