argocd/overlays/jern.me/argocd-repo-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
      - name: argocd-repo-server
        resources:
          requests:
            cpu: "10m"
            memory: "120Mi"
        securityContext:
          readOnlyRootFilesystem: false
