argocd/overlays/jern.me/argocd-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: argocd-server
        resources:
          requests:
            cpu: "10m"
            memory: "35Mi"
